// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundControl Check Background Color layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-opacity-general": 0.05,
    "background-palette-opacity-m": 0.05,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background Color layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-xl-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-s": 6,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-s": true,
    "background-palette-color-status-xl-hover": true,
    "background-palette-color-xl-hover": 2,
    "background-palette-opacity-general": 0.05,
    "background-palette-opacity-m": 0.05,
    "background-palette-opacity-s": 0.05,
    "background-palette-opacity-xl-hover": 0.45,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
]
`;

exports[`BackgroundControl Check Background image layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-xl-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-s": 6,
    "background-palette-color-s-hover": 4,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-s": true,
    "background-palette-color-status-s-hover": true,
    "background-palette-color-status-xl-hover": true,
    "background-palette-color-xl-hover": 2,
    "background-palette-opacity-general": 0.05,
    "background-palette-opacity-m": 0.05,
    "background-palette-opacity-s": 0.05,
    "background-palette-opacity-s-hover": 0.45,
    "background-palette-opacity-xl-hover": 0.45,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-attachment-m": "fixed",
    "background-image-clip-general": "border-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-height-general": 100,
    "background-image-height-m": 100,
    "background-image-height-unit-general": "%",
    "background-image-height-unit-m": "%",
    "background-image-opacity-general": 1,
    "background-image-opacity-m": 0.05,
    "background-image-origin-general": "padding-box",
    "background-image-origin-m": "border-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-m": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-height-unit-m": "%",
    "background-image-position-m": "left top",
    "background-image-position-width-general": 0,
    "background-image-position-width-m": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-position-width-unit-m": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-repeat-m": "repeat",
    "background-image-size-general": "auto",
    "background-image-size-m": "contain",
    "background-image-width-general": 100,
    "background-image-width-m": 100,
    "background-image-width-unit-general": "%",
    "background-image-width-unit-m": "%",
    "display-general": "none",
    "display-m": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
]
`;

exports[`BackgroundControl Check Background image layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-xl-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-s": 6,
    "background-palette-color-s-hover": 4,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-s": true,
    "background-palette-color-status-s-hover": true,
    "background-palette-color-status-xl-hover": true,
    "background-palette-color-xl-hover": 2,
    "background-palette-opacity-general": 0.05,
    "background-palette-opacity-m": 0.05,
    "background-palette-opacity-s": 0.05,
    "background-palette-opacity-s-hover": 0.45,
    "background-palette-opacity-xl-hover": 0.45,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-s": "local",
    "background-image-attachment-xl-hover": "local",
    "background-image-clip-general": "border-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-xl-hover": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-xl-hover": "padding-box",
    "background-image-height-general": 100,
    "background-image-height-m": 100,
    "background-image-height-unit-general": "%",
    "background-image-height-unit-m": "%",
    "background-image-opacity-general": 1,
    "background-image-opacity-m": 0.05,
    "background-image-opacity-xl-hover": 0.82,
    "background-image-origin-general": "padding-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-xl-hover": "content-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-m": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-height-unit-m": "%",
    "background-image-position-m": "left top",
    "background-image-position-s": "center top",
    "background-image-position-width-general": 0,
    "background-image-position-width-m": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-position-width-unit-m": "%",
    "background-image-position-xl-hover": "center top",
    "background-image-repeat-general": "no-repeat",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-s": "space",
    "background-image-repeat-xl-hover": "repeat-x",
    "background-image-size-general": "auto",
    "background-image-size-m": "contain",
    "background-image-size-s": "cover",
    "background-image-size-xl-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-m": 100,
    "background-image-width-unit-general": "%",
    "background-image-width-unit-m": "%",
    "display-general": "none",
    "display-m": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
]
`;

exports[`BackgroundControl Check Background shape layer 1`] = `
Array [
  Object {
    "background-palette-svg-color": 5,
    "background-palette-svg-color-status": true,
    "background-palette-svg-opacity-xl": 0.1,
    "background-svg-SVGData": Object {
      "container-maxi-4748__226": Object {
        "color": "",
        "color-xl": "rgba(0, 0, 0, 0.1)",
        "imageID": "",
        "imageURL": "",
      },
    },
    "background-svg-SVGElement": "<svg fill=\\"undefined\\" data-fill=\\"\\" viewBox=\\"0 0 36.1 36.1\\" height=\\"64px\\" width=\\"64px\\" class=\\"tick-13-maxi-svg\\" data-item=\\"container-maxi-4748__svg\\"><path d=\\"M8.2 15.9c-1.4-.3 2.8-3.2 5.2-2.8 1.4.2 3.6 2.7 4.6 5.1.8 2 1.3-5.3 10.7-13 3-2.5 4.7-2.7 4.7-2.3S31.9 4.6 30.7 6c-5.8 6.5-9.2 15-9.8 17.9-.7 3.7-3.6 3.8-4.4 2.2-2.7-5.3-5.6-9.6-8.3-10.2zm9.1 17.4a13.88 13.88 0 0 1-5.7-1.2C9.9 31.4 8.3 30.4 7 29c-1.3-1.3-2.4-2.9-3.1-4.7a13.88 13.88 0 0 1-1.2-5.7 13.88 13.88 0 0 1 1.2-5.7c.7-1.7 1.7-3.2 3.1-4.6C8.3 7 9.9 5.9 11.6 5.2c1.8-.8 3.8-1.2 5.7-1.2a14.22 14.22 0 0 1 3.6.5c.5.1.8.6.7 1.1-.1.4-.5.7-.9.7h-.2c-1-.3-2.1-.4-3.2-.4-7 0-12.8 5.7-12.8 12.8a12.76 12.76 0 0 0 12.8 12.8 12.76 12.76 0 0 0 12.8-12.8c0-1.5-.3-3-.8-4.4-.2-.5.1-1 .6-1.2s1 .1 1.2.6a14.26 14.26 0 0 1 .9 5 13.88 13.88 0 0 1-1.2 5.7c-.7 1.7-1.8 3.3-3.1 4.7-1.3 1.3-2.9 2.4-4.7 3.1s-3.7 1.1-5.7 1.1z\\" fill=\\"\\"/></svg>",
    "background-svg-SVGMediaID": "",
    "background-svg-SVGMediaURL": "",
    "background-svg-left": null,
    "background-svg-left--unit": "%",
    "background-svg-size": 100,
    "background-svg-size--unit": "%",
    "background-svg-size-xl": 77,
    "background-svg-top": null,
    "background-svg-top--unit": "%",
    "id": 1,
    "type": "shape",
  },
]
`;

exports[`BackgroundControl Check Background shape layer hover 1`] = `
Array [
  Object {
    "background-palette-svg-color": 5,
    "background-palette-svg-color-status": true,
    "background-palette-svg-opacity-s": 0.54,
    "background-palette-svg-opacity-xl": 0.1,
    "background-svg-SVGData": Object {
      "container-maxi-4748__226": Object {
        "color": "",
        "color-s": "rgba(0, 0, 0, 0.54)",
        "color-xl": "rgba(0, 0, 0, 0.1)",
        "imageID": "",
        "imageURL": "",
      },
    },
    "background-svg-SVGElement": "<svg fill=\\"undefined\\" data-fill=\\"\\" viewBox=\\"0 0 36.1 36.1\\" height=\\"64px\\" width=\\"64px\\" class=\\"tick-13-maxi-svg\\" data-item=\\"container-maxi-4748__svg\\"><path d=\\"M8.2 15.9c-1.4-.3 2.8-3.2 5.2-2.8 1.4.2 3.6 2.7 4.6 5.1.8 2 1.3-5.3 10.7-13 3-2.5 4.7-2.7 4.7-2.3S31.9 4.6 30.7 6c-5.8 6.5-9.2 15-9.8 17.9-.7 3.7-3.6 3.8-4.4 2.2-2.7-5.3-5.6-9.6-8.3-10.2zm9.1 17.4a13.88 13.88 0 0 1-5.7-1.2C9.9 31.4 8.3 30.4 7 29c-1.3-1.3-2.4-2.9-3.1-4.7a13.88 13.88 0 0 1-1.2-5.7 13.88 13.88 0 0 1 1.2-5.7c.7-1.7 1.7-3.2 3.1-4.6C8.3 7 9.9 5.9 11.6 5.2c1.8-.8 3.8-1.2 5.7-1.2a14.22 14.22 0 0 1 3.6.5c.5.1.8.6.7 1.1-.1.4-.5.7-.9.7h-.2c-1-.3-2.1-.4-3.2-.4-7 0-12.8 5.7-12.8 12.8a12.76 12.76 0 0 0 12.8 12.8 12.76 12.76 0 0 0 12.8-12.8c0-1.5-.3-3-.8-4.4-.2-.5.1-1 .6-1.2s1 .1 1.2.6a14.26 14.26 0 0 1 .9 5 13.88 13.88 0 0 1-1.2 5.7c-.7 1.7-1.8 3.3-3.1 4.7-1.3 1.3-2.9 2.4-4.7 3.1s-3.7 1.1-5.7 1.1z\\" fill=\\"\\"/></svg>",
    "background-svg-SVGMediaID": "",
    "background-svg-SVGMediaURL": "",
    "background-svg-left": null,
    "background-svg-left--unit": "%",
    "background-svg-position-bottom-xl": "25",
    "background-svg-position-left-xl": "25",
    "background-svg-position-right-xl": "25",
    "background-svg-position-sync-xl": true,
    "background-svg-position-top-xl": "25",
    "background-svg-size": 100,
    "background-svg-size--unit": "%",
    "background-svg-size-s": 723,
    "background-svg-size-xl": 77,
    "background-svg-size-xl-hover": 22,
    "background-svg-top": null,
    "background-svg-top--unit": "%",
    "id": 1,
    "type": "shape",
  },
]
`;

exports[`BackgroundControl Check Background video layer 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-xl-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-s": 6,
    "background-palette-color-s-hover": 4,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-s": true,
    "background-palette-color-status-s-hover": true,
    "background-palette-color-status-xl-hover": true,
    "background-palette-color-xl-hover": 2,
    "background-palette-opacity-general": 0.05,
    "background-palette-opacity-m": 0.05,
    "background-palette-opacity-s": 0.05,
    "background-palette-opacity-s-hover": 0.45,
    "background-palette-opacity-xl-hover": 0.45,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-s": "local",
    "background-image-attachment-s-hover": "scroll",
    "background-image-attachment-xl-hover": "local",
    "background-image-clip-general": "border-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-xl-hover": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-xl-hover": "padding-box",
    "background-image-height-general": 100,
    "background-image-height-m": 100,
    "background-image-height-unit-general": "%",
    "background-image-height-unit-m": "%",
    "background-image-opacity-general": 1,
    "background-image-opacity-m": 0.05,
    "background-image-opacity-xl-hover": 0.82,
    "background-image-origin-general": "padding-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-xl-hover": "content-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-m": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-height-unit-m": "%",
    "background-image-position-m": "left top",
    "background-image-position-s": "center top",
    "background-image-position-s-hover": "left top",
    "background-image-position-width-general": 0,
    "background-image-position-width-m": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-position-width-unit-m": "%",
    "background-image-position-xl-hover": "center top",
    "background-image-repeat-general": "no-repeat",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-s": "space",
    "background-image-repeat-s-hover": "repeat-y",
    "background-image-repeat-xl-hover": "repeat-x",
    "background-image-size-general": "auto",
    "background-image-size-m": "contain",
    "background-image-size-s": "cover",
    "background-image-size-s-hover": "contain",
    "background-image-size-xl-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-m": 100,
    "background-image-width-unit-general": "%",
    "background-image-width-unit-m": "%",
    "display-general": "none",
    "display-m": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
  Object {
    "background-video-endTime": 77,
    "background-video-loop": true,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 1,
    "background-video-opacity-xl": 0.44,
    "background-video-playOnMobile-general": false,
    "background-video-playOnMobile-xl": false,
    "background-video-reduce-border-general": false,
    "background-video-reduce-border-xl": false,
    "background-video-startTime": 55,
    "display-general": "none",
    "display-xl": "block",
    "id": 3,
    "isHover": false,
    "type": "video",
  },
]
`;

exports[`BackgroundControl Check Background video layer hover 1`] = `
Array [
  Object {
    "background-color-clip-path-general": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-color-clip-path-xl-hover": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
    "background-palette-color-general": 5,
    "background-palette-color-m": 5,
    "background-palette-color-s": 6,
    "background-palette-color-s-hover": 4,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "background-palette-color-status-s": true,
    "background-palette-color-status-s-hover": true,
    "background-palette-color-status-xl-hover": true,
    "background-palette-color-xl-hover": 2,
    "background-palette-opacity-general": 0.05,
    "background-palette-opacity-m": 0.05,
    "background-palette-opacity-s": 0.05,
    "background-palette-opacity-s-hover": 0.45,
    "background-palette-opacity-xl-hover": 0.45,
    "display-general": "block",
    "id": 1,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-attachment-m": "fixed",
    "background-image-attachment-s": "local",
    "background-image-attachment-s-hover": "scroll",
    "background-image-attachment-xl-hover": "local",
    "background-image-clip-general": "border-box",
    "background-image-clip-m": "content-box",
    "background-image-clip-path-m": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-path-xl-hover": "polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%)",
    "background-image-clip-xl-hover": "padding-box",
    "background-image-height-general": 100,
    "background-image-height-m": 100,
    "background-image-height-unit-general": "%",
    "background-image-height-unit-m": "%",
    "background-image-opacity-general": 1,
    "background-image-opacity-m": 0.05,
    "background-image-opacity-xl-hover": 0.82,
    "background-image-origin-general": "padding-box",
    "background-image-origin-m": "border-box",
    "background-image-origin-xl-hover": "content-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-m": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-height-unit-m": "%",
    "background-image-position-m": "left top",
    "background-image-position-s": "center top",
    "background-image-position-s-hover": "left top",
    "background-image-position-width-general": 0,
    "background-image-position-width-m": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-position-width-unit-m": "%",
    "background-image-position-xl-hover": "center top",
    "background-image-repeat-general": "no-repeat",
    "background-image-repeat-m": "repeat",
    "background-image-repeat-s": "space",
    "background-image-repeat-s-hover": "repeat-y",
    "background-image-repeat-xl-hover": "repeat-x",
    "background-image-size-general": "auto",
    "background-image-size-m": "contain",
    "background-image-size-s": "cover",
    "background-image-size-s-hover": "contain",
    "background-image-size-xl-hover": "cover",
    "background-image-width-general": 100,
    "background-image-width-m": 100,
    "background-image-width-unit-general": "%",
    "background-image-width-unit-m": "%",
    "display-general": "none",
    "display-m": "block",
    "id": 2,
    "isHover": false,
    "type": "image",
  },
  Object {
    "background-video-endTime": 77,
    "background-video-loop": true,
    "background-video-mediaURL": "https://www.youtube.com/watch?v=C0DPdy98e4c&ab_channel=SimonYapp",
    "background-video-opacity-general": 1,
    "background-video-opacity-s": 0.32,
    "background-video-opacity-xl": 0.44,
    "background-video-opacity-xl-hover": 0.82,
    "background-video-playOnMobile-general": false,
    "background-video-playOnMobile-xl": false,
    "background-video-reduce-border-general": false,
    "background-video-reduce-border-xl": false,
    "background-video-startTime": 55,
    "display-general": "none",
    "display-xl": "block",
    "id": 3,
    "isHover": false,
    "type": "video",
  },
]
`;

exports[`BackgroundControl generate a layer from hover 1`] = `
Array [
  Object {
    "background-palette-svg-color": 5,
    "background-palette-svg-color-status": true,
    "background-palette-svg-opacity-s": 0.54,
    "background-palette-svg-opacity-xl": 0.1,
    "background-svg-SVGData": Object {
      "container-maxi-4748__226": Object {
        "color": "",
        "color-s": "rgba(0, 0, 0, 0.54)",
        "color-xl": "rgba(0, 0, 0, 0.1)",
        "imageID": "",
        "imageURL": "",
      },
    },
    "background-svg-SVGElement": "<svg fill=\\"undefined\\" data-fill=\\"\\" viewBox=\\"0 0 36.1 36.1\\" height=\\"64px\\" width=\\"64px\\" class=\\"tick-13-maxi-svg\\" data-item=\\"container-maxi-4748__svg\\"><path d=\\"M8.2 15.9c-1.4-.3 2.8-3.2 5.2-2.8 1.4.2 3.6 2.7 4.6 5.1.8 2 1.3-5.3 10.7-13 3-2.5 4.7-2.7 4.7-2.3S31.9 4.6 30.7 6c-5.8 6.5-9.2 15-9.8 17.9-.7 3.7-3.6 3.8-4.4 2.2-2.7-5.3-5.6-9.6-8.3-10.2zm9.1 17.4a13.88 13.88 0 0 1-5.7-1.2C9.9 31.4 8.3 30.4 7 29c-1.3-1.3-2.4-2.9-3.1-4.7a13.88 13.88 0 0 1-1.2-5.7 13.88 13.88 0 0 1 1.2-5.7c.7-1.7 1.7-3.2 3.1-4.6C8.3 7 9.9 5.9 11.6 5.2c1.8-.8 3.8-1.2 5.7-1.2a14.22 14.22 0 0 1 3.6.5c.5.1.8.6.7 1.1-.1.4-.5.7-.9.7h-.2c-1-.3-2.1-.4-3.2-.4-7 0-12.8 5.7-12.8 12.8a12.76 12.76 0 0 0 12.8 12.8 12.76 12.76 0 0 0 12.8-12.8c0-1.5-.3-3-.8-4.4-.2-.5.1-1 .6-1.2s1 .1 1.2.6a14.26 14.26 0 0 1 .9 5 13.88 13.88 0 0 1-1.2 5.7c-.7 1.7-1.8 3.3-3.1 4.7-1.3 1.3-2.9 2.4-4.7 3.1s-3.7 1.1-5.7 1.1z\\" fill=\\"\\"/></svg>",
    "background-svg-SVGMediaID": "",
    "background-svg-SVGMediaURL": "",
    "background-svg-left": null,
    "background-svg-left--unit": "%",
    "background-svg-position-bottom-xl": "25",
    "background-svg-position-left-xl": "25",
    "background-svg-position-right-xl": "25",
    "background-svg-position-sync-xl": true,
    "background-svg-position-top-xl": "25",
    "background-svg-size": 100,
    "background-svg-size--unit": "%",
    "background-svg-size-s": 723,
    "background-svg-size-s-hover": 12,
    "background-svg-size-xl": 77,
    "background-svg-size-xl-hover": 22,
    "background-svg-top": null,
    "background-svg-top--unit": "%",
    "id": 1,
    "type": "shape",
  },
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-m": 1,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "display-general": "none",
    "display-m": "block",
    "id": 2,
    "isHover": false,
    "type": "color",
  },
]
`;

exports[`BackgroundControl generate a layer from hover on responsive 1`] = `
Array [
  Object {
    "background-palette-svg-color": 5,
    "background-palette-svg-color-status": true,
    "background-palette-svg-opacity-s": 0.54,
    "background-palette-svg-opacity-xl": 0.1,
    "background-svg-SVGData": Object {
      "container-maxi-4748__226": Object {
        "color": "",
        "color-s": "rgba(0, 0, 0, 0.54)",
        "color-xl": "rgba(0, 0, 0, 0.1)",
        "imageID": "",
        "imageURL": "",
      },
    },
    "background-svg-SVGElement": "<svg fill=\\"undefined\\" data-fill=\\"\\" viewBox=\\"0 0 36.1 36.1\\" height=\\"64px\\" width=\\"64px\\" class=\\"tick-13-maxi-svg\\" data-item=\\"container-maxi-4748__svg\\"><path d=\\"M8.2 15.9c-1.4-.3 2.8-3.2 5.2-2.8 1.4.2 3.6 2.7 4.6 5.1.8 2 1.3-5.3 10.7-13 3-2.5 4.7-2.7 4.7-2.3S31.9 4.6 30.7 6c-5.8 6.5-9.2 15-9.8 17.9-.7 3.7-3.6 3.8-4.4 2.2-2.7-5.3-5.6-9.6-8.3-10.2zm9.1 17.4a13.88 13.88 0 0 1-5.7-1.2C9.9 31.4 8.3 30.4 7 29c-1.3-1.3-2.4-2.9-3.1-4.7a13.88 13.88 0 0 1-1.2-5.7 13.88 13.88 0 0 1 1.2-5.7c.7-1.7 1.7-3.2 3.1-4.6C8.3 7 9.9 5.9 11.6 5.2c1.8-.8 3.8-1.2 5.7-1.2a14.22 14.22 0 0 1 3.6.5c.5.1.8.6.7 1.1-.1.4-.5.7-.9.7h-.2c-1-.3-2.1-.4-3.2-.4-7 0-12.8 5.7-12.8 12.8a12.76 12.76 0 0 0 12.8 12.8 12.76 12.76 0 0 0 12.8-12.8c0-1.5-.3-3-.8-4.4-.2-.5.1-1 .6-1.2s1 .1 1.2.6a14.26 14.26 0 0 1 .9 5 13.88 13.88 0 0 1-1.2 5.7c-.7 1.7-1.8 3.3-3.1 4.7-1.3 1.3-2.9 2.4-4.7 3.1s-3.7 1.1-5.7 1.1z\\" fill=\\"\\"/></svg>",
    "background-svg-SVGMediaID": "",
    "background-svg-SVGMediaURL": "",
    "background-svg-left": null,
    "background-svg-left--unit": "%",
    "background-svg-position-bottom-xl": "25",
    "background-svg-position-left-xl": "25",
    "background-svg-position-right-xl": "25",
    "background-svg-position-sync-xl": true,
    "background-svg-position-top-xl": "25",
    "background-svg-size": 100,
    "background-svg-size--unit": "%",
    "background-svg-size-s": 723,
    "background-svg-size-s-hover": 12,
    "background-svg-size-xl": 77,
    "background-svg-size-xl-hover": 22,
    "background-svg-top": null,
    "background-svg-top--unit": "%",
    "id": 1,
    "type": "shape",
  },
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-m": 1,
    "background-palette-color-status-general": true,
    "background-palette-color-status-m": true,
    "display-general": "none",
    "display-m": "block",
    "id": 2,
    "isHover": false,
    "type": "color",
  },
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-l": 1,
    "background-palette-color-status-general": true,
    "background-palette-color-status-l": true,
    "display-general": "none",
    "display-l": "block",
    "id": 3,
    "isHover": false,
    "type": "color",
  },
]
`;
